# impinj-indy-itk

./: .gitignore  CMakeLists.txt  MPNJINFO  Makefile  README.md  Readme.html
ITK_C/Examples/: CMakeLists.txt  IRI_Access.c  IRI_Antenna_Descriptors.c  IRI_Change_Baudrate.c  IRI_Empty.c  IRI_External_Antenna_Mux.c  IRI_GPIO.c  IRI_Intro.c  IRI_Loader.c  IRI_Multiple_Readers.c  IRI_Power_Management.c  IRI_Select.c  IRI_Test_CW_PRBS.c  ipj_util.c  ipj_util.h
ITK_C/Examples/VS2005/: Examples.sln  Examples.vsprops  README.txt  stdbool.h  stdint.h
ITK_C/Examples/VS2005/IRI/: IRI.vcproj  IRI.vsprops
ITK_C/Examples/VS2005/IRI_Access/: IRI_Access.vcproj
ITK_C/Examples/VS2005/IRI_Antenna_Descriptors/: IRI_Antenna_Descriptors.vcproj
ITK_C/Examples/VS2005/IRI_Change_Baudrate/: IRI_Change_Baudrate.vcproj
ITK_C/Examples/VS2005/IRI_Empty/: IRI_Empty.vcproj
ITK_C/Examples/VS2005/IRI_External_Antenna_Mux/: IRI_External_Antenna_Mux.vcproj
ITK_C/Examples/VS2005/IRI_GPIO/: IRI_GPIO.vcproj
ITK_C/Examples/VS2005/IRI_Intro/: IRI_Intro.vcproj
ITK_C/Examples/VS2005/IRI_Loader/: IRI_Loader.vcproj
ITK_C/Examples/VS2005/IRI_Multiple_Readers/: IRI_Multiple_Readers.vcproj
ITK_C/Examples/VS2005/IRI_Power_Management/: IRI_Power_Management.vcproj
ITK_C/Examples/VS2005/IRI_Select/: IRI_Select.vcproj
ITK_C/Examples/VS2005/IRI_Test_CW_PRBS/: IRI_Test_CW_PRBS.vcproj
ITK_C/Examples/VS2005/ipj_util/: ipj_util.vcproj  ipj_util.vsprops
ITK_C/Examples/VS2012/: Examples.props  Examples.sln  README.txt
ITK_C/Examples/VS2012/IRI/: IRI.props  IRI.vcxproj  IRI.vcxproj.filters
(+28 files in other folders)
